--- a/ej2/styles.css
+++ b/ej2/styles.css
@@ -1,11 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-
-}
-
-html {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
 
 }
@@ -15,7 +11,7 @@ header nav {
     display: flex;
     position: fixed;
     width: 100%;
-    height: 40px;
+    height: 3.5em;
     z-index: 9999;
     text-align: center;
 
@@ -24,7 +20,25 @@ header nav {
 nav {
     display: flex;
     justify-content: space-between;
-    height: 200px;
+    height: 100%;
+    align-items: center;
+
+}
+
+button {
+    padding: 0;
+    margin: 0;
+
+}
+
+a {
+    text-decoration: none;
+
+}
+
+nav img {
+    height: 80%;
+    margin-left: 20px;
 
 }
 
@@ -32,12 +46,116 @@ nav ul {
     display: flex;
     justify-content: space-between;
     list-style: none;
+    gap: 20px;
+    margin-right: 100px;
 
 }
 
-nav ul li {
-    margin-left: 20px;
-    margin-right: 20px;
+nav ul li:nth-child(1) {
+    background-color: white;
+    padding: 10px;
+    padding-top: 5px;
+    border-radius: 25px;
+    height: 20px;
+    font-size: 1em;
+
+}
+
+nav ul li:nth-child(1) a {
+    color: black;
+
+}
+
+nav ul li:nth-child(2) {
+    margin-top: 5px;
+
+}
+
+nav ul li:nth-child(2) a {
+    color: rgb(102, 102, 102);
+
+}
+
+.barra-busqueda {
+    display: flex;
+    gap: 6px;
+
+}
+
+.barra-busqueda .home {
+    display: flex;
+    background-color: rgb(33, 33, 33);
+    border: 0.5px solid rgb(94, 94, 94);
+    border-radius: 25px;
+    text-align: center;
+    height: 33px;
+    padding: 0;
+
+}
+
+.barra-busqueda .home:hover {
+    border: 1px solid rgb(206, 206, 206);
+}
+
+.barra-busqueda .home img {
+    height: 30px;
+
+}
+
+.barra-busqueda .add {
+    background-color: rgb(33, 33, 33);
+    border: 0.5px solid rgb(94, 94, 94);
+    border-radius: 25px;
+    height: 33px;
+    padding: 0;
+
+}
+
+.barra-busqueda .add:hover {
+    border: 1px solid rgb(206, 206, 206);
+}
+
+.barra-busqueda .add img {
+    height: 30px;
+
+}
+
+.barra-busqueda .barra {
+    display: flex;
+    align-items: center;
+    background-color: rgb(33, 33, 33);
+    border-radius: 25px;
+    width: 180%;
+    height: 30px;
+    gap: 10px;
+    border: 0.5px solid rgb(94, 94, 94);
+
+}
+
+.barra-busqueda .barra:focus-within {
+    border: 2px white solid;
+
+}
+
+.barra-busqueda .barra img {
+    height: 17px;
+    margin-right: px;
+
+}
+
+.barra-busqueda .barra input {
+    background-color: rgb(33, 33, 33);
+    margin-right: 10px;
+    border: none;
+    outline: none;
+
+}
+
+.barra-busqueda .barra input {
+    width: 80%;
+    background-color: rgb(33, 33, 33);
+    border: none;
+    outline: none;
 
 }
 
@@ -57,6 +175,7 @@ nav ul li {
     position: absolute;
     bottom: 8em;
     font-size: 4em;
+    margin-left: 0.4em;
     
 }
 
@@ -64,7 +183,7 @@ nav ul li {
     position: absolute;
     bottom: 38em;
     font-size: 1em;
-    padding-left: 40px;
+    margin-left: 3em;
 
 }
 
@@ -80,23 +199,49 @@ nav ul li {
     padding: 30px;
     width: 500px;
     justify-content: space-around;
+    align-items: center;
 
 }
 
 
 .boton-play {
     display: flex;
-    background-color: rgb(22, 190, 22);
+    background-color: rgb(34, 223, 34);
     border-radius: 50%;
-    width: 45px;
-    height: 45px;
+    width: 55px;
+    height: 55px;
     align-items: center;
     justify-content: center;
 
 }
 
+.boton-play:hover {
+    background-color: rgb(97, 221, 97);
+    transform: scale(1.05, 1.05);
+    transition: 0.3s ease-in-out;
+
+}
+
 .boton-play img {
-    width: 25%;
+    width: 30%;
+    margin-left: 7px;
+
+}
+
+.barra-opciones button {
+    height: 30px;
+    border-radius: 25px;
+    width: 80px;
+    background: transparent;
+    border: 0.5px solid rgb(94, 94, 94);
+    padding-bottom: 3px;
+
+}
+
+.barra-opciones button:hover {
+    transform: scale(1.02, 1.02);
+    border: 2px white solid;
+    transition: 0.3s ease-in-out;
 
 }
 
