--- a/ej2/styles.css
+++ b/ej2/styles.css
@@ -302,8 +302,9 @@ nav ul li:nth-child(2):hover a {
     cursor: pointer;
 }
 
+/* Intento malogrado de hacer visible / invisible el menú con los 3 puntitos */
 .menu-invisible {
-    display: flex;
+    display: none;
     flex-direction: column;
     visibility: hidden;
     position: absolute;
@@ -316,9 +317,11 @@ nav ul li:nth-child(2):hover a {
 }
 
 .more:hover .menu-invisible {
-    visibility: visible;
+    display: absolute;
 
 }
+
+/* - */
 
 input[type="checkbox"] {
     appearance: none; 
@@ -433,6 +436,7 @@ tbody tr:hover {
     width: 470px;
     justify-content: space-around;
     list-style: none;
+    margin-bottom: 10px;
 
 }
 
@@ -483,7 +487,9 @@ tbody tr:hover {
     text-align: center;
     align-items: center;
     flex-direction: column;
-    width: 10%;
+    margin: 5px;
+    height: 280px;
+    width: 20%;
     border-radius: 6px;
 
 }
@@ -504,6 +510,26 @@ tbody tr:hover {
     width: 90%;
     margin-bottom: 20px;
     margin-top: 10px;
+
+}
+
+.lista-discografia .discografia-tab .boton-play {
+    opacity: 0;
+    transition: opacity 0.2s ease-in, transform 0.2s ease-in;
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    left: 6%;
+}
+
+.lista-discografia .discografia-tab:hover .boton-play {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.lista-discografia .discografia-tab .boton-play img {
+    width: 50%;
+    padding-top: 10px;
 
 }
 
